--- a/server/src/main/resources/dubbo.properties
+++ b/server/src/main/resources/dubbo.properties
@@ -16,16 +16,19 @@
 dubbo.container=log4j,spring
 dubbo.reference.check=false
 dubbo.registry.client=curator
-dubbo.application.name=dubboOne-provider
+#dubbo.application.name=dubboOne-provider
+dubbo.application.name=dubboOne-provider-1
 dubbo.application.owner=debug
 
 #dubbo\u652F\u6301\u7684dubbo\u534F\u8BAE\u914D\u7F6E
 dubbo.protocol.name=dubbo
-dubbo.protocol.dubbo.port=20903
+#dubbo.protocol.dubbo.port=20903
+dubbo.protocol.dubbo.port=20905
 
 #dubbo\u652F\u6301\u7684http rest api\u7684\u914D\u7F6E
 dubbo.protocol.name=rest
-dubbo.protocol.rest.port=9013
+#dubbo.protocol.rest.port=9013
+dubbo.protocol.rest.port=9015
 dubbo.protocol.rest.server=tomcat
 
 dubbo.service.loadbalance=roundrobin
