新增对 Rest 协议的支持，直接暴露 rest 服务

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 
 # User-specific stuff
 .idea/**
+api/target/**
+model/target/**
+server/target/**
 dubboOne.[0-9]
 dubboOne.0.lck
 .idea/**/tasks.xml
