--- a/model/pom.xml
+++ b/model/pom.xml
@@ -39,10 +39,11 @@
             <version>2.2.0</version>
         </dependency>
 
+        <!-- MyBatis 通用 Mapper -->
         <dependency>
             <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>3.4.0</version>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 
